@@ -55,11 +55,12 @@ changelog.txt uses a syntax similar to RST, with a few special sequences:
 - ``widgets.Panel``: new attributes to control window dragging and resizing with mouse or keyboard
 - ``widgets.Window``: Panel subclass with attributes preset for top-level windows
 - ``widgets.CycleHotkeyLabel``: now supports rendering option labels in the color of your choice
+- ``widgets.CycleHotkeyLabel``: new functions ``setOption()`` and ``getOptionPen()``
 - ``widgets.ToggleHotkeyLabel``: now renders the ``On`` option in green text
 - `overlay`: ``OverlayWidget`` now inherits from ``Panel`` instead of ``Widget`` to get all the frame and mouse integration goodies
 - ``dfhack.gui.getDFViewscreen()``: returns the topmost underlying DF viewscreen
 - ``gui.ZScreen``: Screen subclass that implements window raising, multi-viewscreen input handling, and viewscreen event pass-through so the underlying map can be interacted with and dragged around while DFHack screens are visible
-- ``gui.View``: new function: ``view:getMouseFramePos()`` for detecting whether the mouse is within (or over) the exterior frame of a view
+- ``gui.View``: new function ``view:getMouseFramePos()`` for detecting whether the mouse is within (or over) the exterior frame of a view
 
 ## Internals
 
